force-app/main/default/objects/User_Respuesta__c/User_Respuesta__c.object-meta.xml
<CustomObject>
    <label>User Respuesta</label>
    <nameField>
        <label>User Respuesta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Respuestas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>