force-app/main/default/objects/User_Respuesta__c/fields/Es_Correcto__c.field-meta.xml
<CustomField>
    <fullName>Es_Correcto__c</fullName>
    <label>Es Correcto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>