force-app/main/default/objects/User_Respuesta__c/fields/Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Pregunta__c</fullName>
    <label>Pregunta</label>
    <referenceTo>Pregunta__c</referenceTo>
    <relationshipLabel>User Respuestas</relationshipLabel>
    <relationshipName>User_Respuestas1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>