force-app/main/default/objects/User_Respuesta__c/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Respuesta</label>
    <referenceTo>Respuesta__c</referenceTo>
    <relationshipLabel>User Respuestas</relationshipLabel>
    <relationshipName>User_Respuestas1</relationshipName>
    <type>Lookup</type>
</CustomField>