force-app/main/default/objects/User_Respuesta__c/fields/User_Unidad__c.field-meta.xml
<CustomField>
    <fullName>User_Unidad__c</fullName>
    <label>User Unidad</label>
    <referenceTo>User_Unidad__c</referenceTo>
    <relationshipLabel>User Respuestas</relationshipLabel>
    <relationshipName>User_Respuestas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>